Fixed Images and alignment of "Showcases"

--- a/src/theme/ShowcaseProjects/styles.module.css
+++ b/src/theme/ShowcaseProjects/styles.module.css
@@ -7,6 +7,8 @@
 
 .Image {
   justify-content: center;
+  height: 220px;
+  width: auto;
 }
 
 .Desc {
